--- a/python-new-statistics/part3.ipynb
+++ b/python-new-statistics/part3.ipynb
@@ -3050,12 +3050,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# chapter11"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
