--- a/python-new-statistics/part5.ipynb
+++ b/python-new-statistics/part5.ipynb
@@ -2436,12 +2436,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "808.785\n",
+      "807.112\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mod_full.aic.round(3))\n",
+    "print(mod_non_humi.aic.round(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(mod)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
