--- a/python-understand-statistics/notebook/ch11.ipynb
+++ b/python-understand-statistics/notebook/ch11.ipynb
@@ -342,10 +342,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pvar_test(sample, var0, alpha=0.05):\n",
+    "    u_var = np.var(sample, ddof=1)\n",
+    "    n = len(sample)\n",
+    "    rv = stats.chi2(df=n-1)\n",
+    "    interval = rv.interval(1-alpha)\n",
+    "    y = (n-1) * u_var / var0\n",
+    "    if interval[0] <= y <= interval[1]:\n",
+    "        print('帰無仮説を採択')\n",
+    "    else:\n",
+    "        print('帰無仮説を棄却')\n",
+    "    if y < rv.isf(0.5):\n",
+    "        p = rv.cdf(y) * 2\n",
+    "    else:\n",
+    "        p = (1-rv.cdf(y)) * 2\n",
+    "    print(f'p値は{p:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "帰無仮説を採択\n",
+      "p値は0.085\n"
+     ]
+    }
+   ],
+   "source": [
+    "pvar_test(sample, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pmean_test(sample, mean0, alpha=0.05):\n",
+    "    s_mean = np.mean(sample)\n",
+    "    u_var = np.var(sample, ddof=1)\n",
+    "    n = len(sample)\n",
+    "    rv = stats.t(df=n-1)\n",
+    "    interval = rv.interval(1-alpha)\n",
+    "    t = (s_mean-mean0) / np.sqrt(u_var/n)\n",
+    "    if interval[0] <= t <= interval[1]:\n",
+    "        print('帰無仮説を採択')\n",
+    "    else:\n",
+    "        print('帰無仮説を棄却')\n",
+    "    if t < 0:\n",
+    "        p = rv.cdf(t) * 2\n",
+    "    else:\n",
+    "        p = (1-rv.cdf(t)) * 2\n",
+    "    print(f'p値は{p:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "帰無仮説を採択\n",
+      "p値は0.169\n"
+     ]
+    }
+   ],
+   "source": [
+    "pmean_test(sample, 130)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t, p = stats.ttest_"
+   ]
   }
  ],
  "metadata": {
