--- a/r-irt-introduction/ch03/3.5.ipynb
+++ b/r-irt-introduction/ch03/3.5.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,145 +24,172 @@
     "        [1,1,1,1,1,1,1,1,1,1,],\n",
     "        [1,1,1,1,1,1,1,1,0,1,],\n",
     "        [1,1,1,1,1,1,1,1,0,1,],\n",
-    "        \n",
+    "        [1,1,1,1,1,1,1,0,1,1,],\n",
+    "        [0,1,1,0,1,1,0,0,1,1,],\n",
+    "        [1,1,1,1,1,1,1,0,0,1,],\n",
+    "        [1,1,0,1,0,1,1,0,0,1,],\n",
+    "        [0,0,1,1,1,1,1,1,0,1,],\n",
+    "        [1,1,1,0,1,1,1,0,0,0,],\n",
+    "        [1,1,0,1,1,1,0,0,0,1,],\n",
+    "        [0,1,1,0,1,0,1,1,0,0,],\n",
+    "        [0,1,1,0,1,0,1,0,0,1,],\n",
+    "        [1,1,0,0,1,0,1,0,0,0,],\n",
+    "        [1,1,0,1,1,1,0,0,0,0,],\n",
+    "        [0,1,0,0,1,1,0,0,0,0,],\n",
+    "        [0,0,0,0,1,0,1,1,0,1,],\n",
+    "        [0,0,0,0,0,1,0,0,0,1,],\n",
     "    ],\n",
     "    columns = ['q'+str(n) for n in range(1,11)],\n",
-    "    index = ['Hasegawa','Honda', 'Uchikawa', 'Matsuda','LaHair','Yanagita']\n",
+    "    index = ['Hasegawa','Honda', 'Uchikawa', 'Matsuda','LaHair','Yanagita','Yoshimura','Yamazaki','Imamiya','Pena','Settu','Yamada','Takeda','Ohtonari',\n",
+    "            'Terahara','Higashihama','Senga','Iwasaki','Morifuku','Falkenborg']\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>q1</th>\n",
-       "      <th>q2</th>\n",
-       "      <th>q3</th>\n",
-       "      <th>q4</th>\n",
-       "      <th>q5</th>\n",
-       "      <th>q6</th>\n",
-       "      <th>q7</th>\n",
-       "      <th>q8</th>\n",
-       "      <th>q9</th>\n",
-       "      <th>q10</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Hasegawa</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Honda</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Uchikawa</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Matsuda</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LaHair</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          q1  q2  q3  q4  q5  q6  q7  q8  q9  q10\n",
-       "Hasegawa   1   1   1   1   1   1   1   1   1    1\n",
-       "Honda      1   1   1   1   1   1   1   0   0    1\n",
-       "Uchikawa   1   1   1   1   1   1   1   1   0    1\n",
-       "Matsuda    1   1   1   1   1   1   1   1   1    1\n",
-       "LaHair     1   1   1   1   1   1   1   1   0    1"
+       "(20, 10)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.head()"
+    "test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CTT:\n",
+    "    def __init__(self):\n",
+    "        self.item_difficulty = None\n",
+    "        self.item_discriminancy = None\n",
+    "    def fit(self, array):\n",
+    "        '''\n",
+    "        項目困難度 item difficulty\n",
+    "        '''\n",
+    "        self.item_difficulty = array.mean(axis=0)\n",
+    "        '''\n",
+    "        項目識別力 item discriminancy\n",
+    "        '''\n",
+    "        y_mean = array.mean(axis=1)   \n",
+    "        item_discriminancy = []\n",
+    "        print(y_mean.shape)\n",
+    "        \n",
+    "        for y in array.T:\n",
+    "            print(y.shape)\n",
+    "            item_discriminancy.append(np.corrcoef(y_mean, y)[0][1])\n",
+    "        self.item_discriminancy = np.array(item_discriminancy)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctt = CTT()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ctt.fit(test.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.65, 0.85, 0.65, 0.6 , 0.9 , 0.8 , 0.75, 0.4 , 0.2 , 0.75])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctt.item_difficulty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctt.item_discriminancy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.62784679, 0.40268102, 0.71851059, 0.76795935, 0.36757294,\n",
+       "       0.44324972, 0.53678755, 0.46783731, 0.47568263, 0.48685383])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctt.item_discriminancy"
+   ]
   }
  ],
  "metadata": {
