--- a/r-irt-introduction/ch03/3.5.ipynb
+++ b/r-irt-introduction/ch03/3.5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "(20, 10)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,28 +67,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CTT:\n",
-    "    def __init__(self):\n",
-    "        self.item_difficulty = None\n",
-    "        self.item_discriminancy = None\n",
-    "    def fit(self, array):\n",
+    "class TestTheory:\n",
+    "    def __init__(self, array):\n",
+    "        self.array = array\n",
+    "    def calculate_statistics(self):\n",
+    "\n",
+    "        '''\n",
+    "        zscore\n",
+    "        '''\n",
+    "        sums = self.array.sum(axis=1)\n",
+    "        self.zscore = (sums - sums.mean()) /  np.std(sums)\n",
+    "        '''\n",
+    "        偏差値\n",
+    "        '''\n",
+    "        self.hensachi = 10*self.zscore + 50\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CTT(TestTheory):\n",
+    "    def fit(self):\n",
     "        '''\n",
     "        項目困難度 item difficulty\n",
     "        '''\n",
-    "        self.item_difficulty = array.mean(axis=0)\n",
+    "        self.item_difficulty = self.array.mean(axis=0)\n",
     "        '''\n",
     "        項目識別力 item discriminancy\n",
     "        '''\n",
-    "        y_mean = array.mean(axis=1)   \n",
+    "        y_mean = self.array.mean(axis=1)   \n",
     "        item_discriminancy = []\n",
-    "        print(y_mean.shape)\n",
     "        \n",
-    "        for y in array.T:\n",
-    "            print(y.shape)\n",
+    "        for y in self.array.T:\n",
     "            item_discriminancy.append(np.corrcoef(y_mean, y)[0][1])\n",
     "        self.item_discriminancy = np.array(item_discriminancy)\n",
     "        "
@@ -96,43 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctt = CTT()"
+    "ctt = CTT(test.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n",
-      "(20,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ctt.fit(test.values)"
+    "ctt.fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "array([0.65, 0.85, 0.65, 0.6 , 0.9 , 0.8 , 0.75, 0.4 , 0.2 , 0.75])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "(10,)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "       0.44324972, 0.53678755, 0.46783731, 0.47568263, 0.48685383])"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,6 +190,68 @@
    "source": [
     "ctt.item_discriminancy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctt.calculate_statistics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.49191369,  0.62703619,  1.05947494,  1.49191369,  1.05947494,\n",
+       "        1.05947494,  1.05947494, -0.23784131,  0.62703619, -0.23784131,\n",
+       "        0.19459744, -0.23784131, -0.23784131, -0.67028006, -0.67028006,\n",
+       "       -1.10271881, -0.67028006, -1.53515756, -1.10271881, -1.96759631])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctt.zscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([64.91913688, 56.27036188, 60.59474938, 64.91913688, 60.59474938,\n",
+       "       60.59474938, 60.59474938, 47.62158687, 56.27036188, 47.62158687,\n",
+       "       51.94597438, 47.62158687, 47.62158687, 43.29719937, 43.29719937,\n",
+       "       38.97281187, 43.29719937, 34.64842437, 38.97281187, 30.32403687])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctt.hensachi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
